tests/baselines/reference/parserGetAccessorWithTypeParameters1.errors.txt
==== tests/cases/compiler/parserGetAccessorWithTypeParameters1.ts (2 errors) ====
    class C {
      get foo<T>() { }
             ~~~
!!! parserGetAccessorWithTypeParameters1.ts(2,10): error TS1093: Type parameters cannot appear on an accessor.
          ~~~
!!! parserGetAccessorWithTypeParameters1.ts(2,7): error TS2126: Getters must return a value.
    }